# Top-Network-Interfaces-Monitor

./: .gitignore  README.md  main.py  pyproject.toml
monitor/: __init__.py  calculator.py  collector.py
top_network_interfaces_monitor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
